# github-actions-tests

./: .gitignore  .pre-commit-config.yaml  README.md  requirements_dev.txt  setup.cfg  setup.py  tox.ini
src/flapping/: __init__.py
src/new_name/: flap_that_like_button.py
src/slapping/: slap_that_like_button.py
tests/: conftest.py  test_flapping.py  test_slapping.py
