[metadata]
name = new_name
description = flap that like button
author = James Murphy
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    new_name
install_requires =
    requests>=2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov==3.0.0
    mypy>=0.982
    flake8>= 5.0
    tox>=3.26.0

[options.package_data]
new_name = py.typed

[flake8]
max-line-length = 88
